[package]
name = "sqlx-rt"
version = "0.1.1"
repository = "https://github.com/launchbadge/sqlx"
license = "MIT OR Apache-2.0"
description = "Runtime abstraction used by SQLx, the Rust SQL toolkit. Not intended to be used directly."
edition = "2018"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
]

[features]
runtime-actix = [ "actix-rt", "actix-threadpool", "tokio", "native-tls", "tokio-native-tls", "once_cell" ]
runtime-async-std = [ "async-std", "native-tls", "async-native-tls" ]
runtime-tokio = [ "tokio", "native-tls", "tokio-native-tls", "once_cell" ]
runtime-actix-rustls = [ "actix-rt", "actix-threadpool", "tokio", "rustls", "tokio-rustls", "once_cell" ]
runtime-tokio-rustls = [ "tokio", "rustls", "tokio-rustls", "once_cell" ]

[dependencies]
async-native-tls = { version = "0.3.3", optional = true }
actix-rt = { version = "1.1.1", optional = true }
actix-threadpool = { version = "0.3.2", optional = true }
async-std = { version = "1.6.0", features = [ "unstable" ], optional = true }
tokio = { version = "0.2.21", optional = true, features = [ "blocking", "stream", "fs", "tcp", "uds", "macros", "rt-core", "rt-threaded", "time", "dns", "io-util" ] }
tokio-native-tls = { version = "0.1.0", optional = true }
tokio-rustls = { version = "0.14.0", optional = true }
native-tls = { version = "0.2.4", optional = true }
rustls = { version = "0.18.0", optional = true }
once_cell = { version = "1.4", features = ["std"], optional = true }
